--- a/Teste/appsettings.json
+++ b/Teste/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-AG4T1BV\\SQLEXPRESS;Trusted_Connection=True;Integrated Security=True;"
+    "DefaultConnection": "Data Source=;Trusted_Connection=True;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
